navbar alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,10 @@ body {
   z-index: 100;
   backdrop-filter: blur(5.6px);
   -webkit-backdrop-filter: blur(3px);
-  padding: 10px 20px;
+  padding: 10px 0;
   height: 100px; /* Adjust based on design */
-  
+  padding-left:6rem;  
+  max-width:100vw;
 }
 
 .container {
