--- a/src/components/shared/navbar/navbar.css
+++ b/src/components/shared/navbar/navbar.css
@@ -13,11 +13,10 @@
     list-style: none;
   }
 
-  .logo { 
-    margin-top: 2rem;
-    width: 12vw;  /* Set a fixed width for logo */
+  .logo {  
+    width: 10vw;  /* Set a fixed width for logo */
     height: auto;  /* Automatically adjust the height based on the image */
-    padding: 1rem;
+    margin:auto 0;
   }
   
   .logo img {
